--- a/templates/historic/ajax/_filtermandat.html.twig
+++ b/templates/historic/ajax/_filtermandat.html.twig
@@ -25,7 +25,7 @@
     </table>
 {% else%}
     <div class="container">
-        <div class="alert alert-warning" role="alert">
+        <div class="alert alert-warning mt-5" role="alert">
             <i class="fa fa-warning"></i>&nbsp;&nbsp;Aucune donnée à afficher
         </div>
     </div>
