--- a/templates/admin/challenges/new.html.twig
+++ b/templates/admin/challenges/new.html.twig
@@ -5,10 +5,10 @@
     {% include 'admin/layout/navbar.html.twig' %}
 
     <div class="container mt-4">
-    <h3 style="color: #531B51;"><b>CRÉE UN CHALLENGE</b></h3>
+    <h3 class="text-viaautomobile mb-5"><b>CRÉE UN CHALLENGE</b></h3>
     {{ form_start(form) }}
     <div class="card">
-        <h4 style="padding-top: 20px; padding-left: 20px;">Informations générales</h4>
+        <h4 class="text-viaautomobile">Informations générales</h4>
         <hr>
         <div class="card-body">
             <div class="row">
@@ -24,7 +24,7 @@
                 </div>
             </div>
             {{ form_row(form.en_cours) }}
-            <button style="background-color: #754974;" type="submit" class="btn btn-light mb-2"><span style="color: white;">Créer</span></button>
+            <button type="submit" class="btn btn-light light-button mb-2">Créer</button>
             {{ form_end(form) }}
         </div>
     </div>
