--- a/templates/historic/ajax/_filtervente.html.twig
+++ b/templates/historic/ajax/_filtervente.html.twig
@@ -36,7 +36,7 @@
 
 {% else%}
     <div class="container">
-        <div class="alert alert-warning" role="alert">
+        <div class="alert alert-warning mt-5" role="alert">
             <i class="fa fa-warning"></i>&nbsp;&nbsp;Aucune donnée à afficher
         </div>
     </div>
