--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
     <img class="logo_blanc" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
     <div class="container mb-5">
 
-        {% include 'notifications/notification.html.twig' %}
+        {% include 'notifications/notification.html.twig' with {error: error} only %}
 
         <div class="card security_card">
             <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
