feat: correction home

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,7 +4,23 @@
 
     <img class="logo_blanc" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
 
-    {% include 'notifications/notification.html.twig' %}
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success mt-5">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% endfor %}
+
+    {% for message in app.flashes('error') %}
+        <div class="alert alert-danger mt-5">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% endfor %}
 
     <div class="index">
 
