--- a/templates/pages/edit_account.html.twig
+++ b/templates/pages/edit_account.html.twig
@@ -6,7 +6,7 @@
     {% include 'layout/navbar.html.twig' %}
 
     <div class="container mt-5">
-        <h3 class="text-viaautomobile mb-5"><b>PARAMÈTRES DU COMPTE</b></h3>
+        <h3 class="text-viaautomobile mobile-parametre mb-5"><b>PARAMÈTRES DU COMPTE</b></h3>
         {{ form_start(form) }}
             <div class="card edit-card">
                 <h4>Informations générales</h4><hr/>
