--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
         <link rel="stylesheet" type="text/css" href="{{ asset('/assets/css/style.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ asset('/assets/css/sidebar.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('/assets/css/responsive.css') }}">
         <script src="{{ asset('/assets/js/script.js') }}"></script>
         <script src="{{ asset('/assets/js/sidebar.js') }}"></script>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
