--- a/templates/admin/ajax/_filter.html.twig
+++ b/templates/admin/ajax/_filter.html.twig
@@ -2,8 +2,8 @@
 
     <div id="ma_table_Collaborateurs">
         <div class="row">
-            <div class="col-md-6">
-                <table  class="table table-striped">
+            <div class="col table-admin-vente">
+                <table class="table table-striped">
                     <thead>
                     <tr>
                         <th scope="col">Collaborateurs</th>
@@ -53,7 +53,7 @@
                     <a id="lien" href="{{ path('export-csv-slug', {slug: "vente"}) }}"><i class="fa fa-file-excel-o" aria-hidden="true"></i>&nbsp;&nbsp;Exporter au format CSV</a>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col table-admin-mandat">
                 <table class="table table-striped">
                     <thead>
                     <tr>
