--- a/templates/admin/challenges/new.html.twig
+++ b/templates/admin/challenges/new.html.twig
@@ -5,9 +5,9 @@
     {% include 'admin/layout/navbar.html.twig' %}
 
     <div class="container mt-4">
-    <h3 class="text-viaautomobile mb-5"><b>CRÉE UN CHALLENGE</b></h3>
+    <h3 class="text-viaautomobile new-title mt-5 mb-5"><b>CRÉER UN CHALLENGE</b></h3>
     {{ form_start(form) }}
-    <div class="card">
+    <div class="card new-cards">
         <h4 class="text-viaautomobile">Informations générales</h4>
         <hr>
         <div class="card-body">
