--- a/templates/admin/miscellaneous.html.twig
+++ b/templates/admin/miscellaneous.html.twig
@@ -4,7 +4,7 @@
 
     {% include 'admin/layout/navbar.html.twig' %}
 
-    <div class="mt-5 ml-5">
+    <div class="miscellaneous mt-5 ml-5">
         <h3 class="text-viaautomobile mb-5"><b>OPÉRATIONS DIVERSES</b></h3>
         <form id="myform" action="" method="POST">
             <div class="form-group">
