--- a/templates/admin/challenges/challenge.html.twig
+++ b/templates/admin/challenges/challenge.html.twig
@@ -4,7 +4,7 @@
 
     {% include 'admin/layout/navbar.html.twig' %}
 
-    <div class="container mt-4">
+    <div class="container app-challenges mt-4">
         <h3 class="text-viaautomobile"><b>GÉRER LES CHALLENGES</b></h3>
 
         {% include 'admin/challenges/notification/notification.html.twig' %}
@@ -33,7 +33,7 @@
             </tbody>
         </table>
         <div class="text-right mt-4">
-            <a href="{{ path('admin-challenge-new') }}" class="btn btn-success">Créer une nouveau challenge</a>
+            <a href="{{ path('admin-challenge-new') }}" class="btn btn-success">Créer un nouveau challenge</a>
         </div>
     </div>
 
