--- a/templates/admin/challenges/edit.html.twig
+++ b/templates/admin/challenges/edit.html.twig
@@ -18,9 +18,9 @@
     {% endblock %}
 
     <div class="container mt-4">
-        <h3 class="text-viaautomobile mt-5 mb-5"><b>ÉDITER LE CHALLENGE</b></h3>
+        <h3 class="text-viaautomobile edit-title mt-5 mb-5"><b>ÉDITER LE CHALLENGE</b></h3>
         {{ form_start(form) }}
-            <div class="card">
+            <div class="card edit-card">
             <h4 class="text-viaautomobile">Informations générales</h4><hr/>
             <div class="card-body">
                 <div class="row">
