--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -143,10 +143,24 @@ and (orientation: portrait) {
     {
         zoom: 200%;
     }
+}
 
+@media screen
+and (min-device-width: 1200px)
+and (max-device-width: 1600px)
+and (-webkit-min-device-pixel-ratio: 1) {
+
+    .dashboard-hr
+    {
+        margin-left: 530px;
+    }
+
+    .edit-card
+    {
+        margin-left: 50px;
+    }
 
 
 }
-
 
 
