--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,7 @@
         <link rel="stylesheet" type="text/css" href="{{ asset('/assets/css/style.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ asset('/assets/css/sidebar.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ asset('/assets/css/responsive.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('/assets/css/tablet.css') }}">
         <script src="{{ asset('/assets/js/script.js') }}"></script>
         <script src="{{ asset('/assets/js/sidebar.js') }}"></script>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
