--- a/templates/historic/ajax/_filtervente.html.twig
+++ b/templates/historic/ajax/_filtervente.html.twig
@@ -1,5 +1,5 @@
 {% if ventes is not empty %}
-    <table id="ma_table_Ventes" class="table table-striped ml-5 mt-5 mobile-table">
+    <table id="ma_table_Ventes" class="table table-striped ml-5 mt-5">
         <thead>
             <tr>
                 <th scope="col">Date de vente</th>
