--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -5,6 +5,14 @@
     {% include 'layout/navbar.html.twig' %}
     {% include 'layout/menu.html.twig' %}
 
+    <div class="container">
+        {% for message in app.flashes('success') %}
+            {% if message == 'Votre compte a été modifié avec succès' %}
+                <script> toastr.success('Votre compte a été modifié avec succès'); </script>
+            {% endif %}
+        {% endfor %}
+    </div>
+
     <div class="row row-dashboard">
         <div class="col dashboard-col">
             <h3 class="text-viaautomobile"><b>NOMBRE DE MANDATS</b></h3>
