--- a/templates/historic/ajax/_filtermandat.html.twig
+++ b/templates/historic/ajax/_filtermandat.html.twig
@@ -14,7 +14,7 @@
                     <td align="center"><i class="fa fa-times"/></td>
                 {% else %}
                     <td align="center">
-                        <a class="btn btn-link js-delete" href="{{ path('historique_mandat', {id: mandat.id}) }}">
+                        <a class="btn btn-link js-delete" href="/historique-mandat/{{ mandat.id }}">
                             <i class="fa fa-trash"></i>
                         </a>
                     </td>
