--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -23,7 +23,7 @@
             <div class="col admin">
                 <form action="" method="POST">
                     <div class="form-group">
-                        <select name="mois" class="historique-select w-50">
+                        <select name="mois-admin" class="historique-select w-50">
                             <option id="periode" selected="selected"><span>Mois</span></option>
                             <option id="01">Janvier</option>
                             <option id="02">Février</option>
@@ -44,7 +44,7 @@
             <div class="col admin">
                 <form action="" method="POST">
                     <div class="form-group">
-                        <select name="trimestre" class="historique-select w-50">
+                        <select name="trimestre-admin" class="historique-select w-50">
                             <option id="periode" selected="selected"><span>Trimestre</span></option>
                             <option id="1">Trimestre 1</option>
                             <option id="2">Trimestre 2</option>
@@ -122,119 +122,5 @@
             </table>
         </div>
     </div>
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type="text/javascript">
-
-        $(document).ready(function() {
-
-            $('select[name="mois"]').change(function(e) {
-
-                e.preventDefault();
-                var mois = $("select[name='mois'] option:selected").attr("id");
-                var table = $('#ma_table_Collaborateurs');
-
-                var path_vente = '{{ path("export-csv-month", {'slug': 'vente', 'mois': '00'}) }}';
-                var path_mandat = '{{ path("export-csv-month", {'slug': 'mandat', 'mois': '00'}) }}';
-
-                if(mois === 'periode')
-                {
-                    var url_vente = '{{ path('export-csv-slug', {'slug': 'vente'}) }}';
-                    var url_mandat = '{{ path('export-csv-slug', {'slug': 'mandat'}) }}';
-                }
-                else
-                {
-                    var url_vente = path_vente.replace("00", mois);
-                    var url_mandat = path_mandat.replace("00", mois);
-                }
-
-                jQuery.ajax({
-                    headers: {
-                      'X-Requested-With': 'XMLHttpRequest'
-                    },
-                    url : '{{ path('admin') }}',
-                    type : 'POST',
-                    data : {
-                        mois : mois
-                    },
-                    success: function(data)
-                    {
-                        table.html(data);
-                        $('#lien').attr('href',url_vente);
-                        $('#lien_mandat').attr('href',url_mandat);
-                    },
-                    error: function(jqxhr)
-                    {
-                        alert(jqxhr.responseText);
-                    }
-                });
-
-
-            });
-
-            $('select[name="trimestre"]').change(function(e) {
-
-                e.preventDefault();
-                var trimestre = $("select[name='trimestre'] option:selected").attr("id");
-                var table = $('#ma_table_Collaborateurs');
-
-                var path_vente = '{{ path("export-csv-trim", {'slug': 'vente', 'trimestre': '00'}) }}';
-                var path_mandat = '{{ path("export-csv-trim", {'slug': 'mandat', 'trimestre': '00'}) }}';
-
-                if(trimestre === 'periode')
-                {
-                    var url_vente = '{{ path('export-csv-slug', {'slug': 'vente'}) }}';
-                    var url_mandat = '{{ path('export-csv-slug', {'slug': 'mandat'}) }}';
-                }
-                else
-                {
-                    var url_vente = path_vente.replace("00", trimestre);
-                    var url_mandat = path_mandat.replace("00", trimestre);
-                }
-
-                jQuery.ajax({
-                    headers: {
-                        'X-Requested-With': 'XMLHttpRequest'
-                    },
-                    url : '{{ path('admin') }}',
-                    type : 'POST',
-                    data : {
-                        trimestre : trimestre
-                    },
-                    success: function(data)
-                    {
-                        table.html(data);
-                        $('#lien').attr('href',url_vente);
-                        $('#lien_mandat').attr('href',url_mandat);
-                    },
-                    error: function(jqxhr)
-                    {
-                        alert(jqxhr.responseText);
-                    }
-                });
-
-
-            });
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        });
-    </script>
 
 {% endblock %}
