--- a/templates/historic/ajax/_filtervente.html.twig
+++ b/templates/historic/ajax/_filtervente.html.twig
@@ -24,7 +24,7 @@
                     <td align="center"><i class="fa fa-times"/></td>
                 {% else %}
                     <td align="center">
-                        <a class="btn btn-link js-delete" href="{{ path('historique_vente', {id: vente.id}) }}">
+                        <a class="btn btn-link js-delete" href="/historique-vente/{{ vente.id }}">
                             <i class="fa fa-trash"></i>
                         </a>
                     </td>
