feat: modification style des modals du tableau de bord

--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -59,8 +59,9 @@
                     {{ form_start(form_mandat) }}
                     {{ form_row(form_mandat.nombre, {'attr': {'placeholder': 'Nombre'}}) }}
                 </div>
-                <div class="modal-footer">
-                    <button rel="popuptrois" id="poplight3" type="submit" class="btn btn-light popup-dashboard" data-dismiss="modal">Ajouter</button>
+                <div class="text-center">
+                    <hr>
+                    <button rel="popuptrois" id="poplight3" type="submit" class="btn btn-light popup-dashboard mb-3" data-dismiss="modal">Ajouter</button>
                     {{ form_end(form_mandat) }}
                 </div>
             </div>
@@ -92,44 +93,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button id="js-add" type="submit" class="btn btn-light popup-dashboard" data-dismiss="modal">Ajouter</button>
+                <div class="text-center">
+                    <hr>
+                    <button id="js-add" type="submit" class="btn btn-light popup-dashboard mb-3" data-dismiss="modal">Ajouter</button>
                 </div>
             </div>
         </div>
     </div>
 
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
